fixed(FET-SearchPage):fixed text-align

--- a/src/components/Card/Cardapp.css
+++ b/src/components/Card/Cardapp.css
@@ -1,6 +1,3 @@
-.card-app{
-  text-align: center;
-}
 .title{
     height: 100px;
     padding-top: 10px;
