--- a/src/components/SearchPage/SearchPage.scss
+++ b/src/components/SearchPage/SearchPage.scss
@@ -8,7 +8,6 @@
   }
   h1 {
     color: white;
-    text-align: left;
   }
   height: 90vh;
   width: 100vw;
@@ -29,7 +28,6 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      text-align: center;
     }
     #compare {
       width: 25vw;
